--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,21 @@
     ]
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.4",
     "@redwoodjs/auth-dbauth-web": "6.3.1",
     "@redwoodjs/forms": "6.3.1",
     "@redwoodjs/router": "6.3.1",
     "@redwoodjs/web": "6.3.1",
+    "humanize-string": "2.1.0",
+    "i18n": "^0.15.1",
+    "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.1.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-i18next": "^13.3.1",
+    "react-markdown": "^9.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@redwoodjs/vite": "6.3.1",
@@ -25,9 +33,9 @@
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/line-clamp": "0.4.4",
     "@tailwindcss/typography": "0.5.10",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.30",
-    "postcss-loader": "7.3.3",
-    "tailwindcss": "3.3.3"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "tailwindcss": "^3.3.3"
   }
 }
